WIP: document SETTING_WAIT_FOR_ACTIVE_SHARDS + fix doc tests

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@ the appropriate section of the docs.
 Breaking Changes
 ================
 
+ - Changed default required shards for index creation and write operations
+   from quorum to ``all``.
+
 Changes
 =======
 
